# agentswarm-arena

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  SOLANA_DEPLOY.md  STATUS.md  deploy.sh  package-lock.json  package.json  tailwind.config.js
programs/arena-logger/: Cargo.toml
programs/arena-logger/src/: lib.rs
src/agents/: ArbitrageAgent.ts  BaseAgent.ts  DAOAgent.ts  LiquidityAgent.ts  OracleAgent.ts  ResearchAgent.ts  RiskAgent.ts  SecurityAgent.ts  SentimentAgent.ts  TraderAgent.ts  YieldAgent.ts  agent-names.ts  index.ts
src/agents/behaviors/: CartelBehavior.ts  ScammingBehavior.ts  index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/agent/[id]/: page.tsx
src/app/api/agent/[id]/: route.ts
src/app/api/arena/: route.ts
src/app/api/arena/poll/: route.ts
src/app/api/x402/service/: route.ts
src/app/arena/: page.tsx
src/app/components/: ArenaCharts.tsx  BetPanel.tsx  ReasoningFeed.tsx  WalletProvider.tsx
src/app/leaderboard/: page.tsx
src/arena/: engine.ts
src/lib/: arena-singleton.ts  kimi-client.ts  solana-data.ts  solana-logger.ts  x402-client.ts
src/types/: agent.ts
