[package]
name = "arena-logger"
version = "0.1.0"
description = "On-chain logging for AgentSwarm Arena"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena_logger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
blake3 = "=1.5.0"
indexmap = "=2.0.0"
